Delegates plugin versions to ASF parent
This PR removes all explicitly versioned plugins that are also defined in the
Apache ASF parent POM (`org.apache:apache`).

This has the following effect on plugin versions:

 * `maven-assembly-plugin` bumped to 3.4.1
 * `maven-jar-plugin` bumped to 3.2.2
 * `maven-javadoc-plugin` bumped to 3.4.0
 * `maven-project-info-reports-plugin` bumped to 3.3.0
 * `maven-release-plugin` bumped to 3.0.0-M6
 * `maven-scm-plugin` bumped to 1.13.0
 * `maven-site-plugin` bumped to 3.12.0

--- a/log4j-perf/pom.xml
+++ b/log4j-perf/pom.xml
@@ -41,6 +41,7 @@
     <uberjar.name>benchmarks</uberjar.name>
     <revapi.skip>true</revapi.skip>
     <maven.doap.skip>true</maven.doap.skip>
+    <module.name>org.apache.logging.log4j.perf</module.name>
   </properties>
 
   <dependencies>
@@ -171,7 +172,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${compiler.plugin.version}</version>
         <configuration>
           <compilerVersion>9</compilerVersion>
           <source>9</source>
@@ -181,7 +181,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>${deploy.plugin.version}</version>
         <configuration>
           <skip>true</skip>
         </configuration>
