--- a/log4j-jul/pom.xml
+++ b/log4j-jul/pom.xml
@@ -101,14 +101,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${surefire.plugin.version}</version>
         <dependencies>
           <!-- Manual override of the Surefire provider -->
           <!-- The `surefire-platform` provider initializes JUL before calling our tests -->
           <dependency>
             <groupId>org.apache.maven.surefire</groupId>
             <artifactId>surefire-junit47</artifactId>
-            <version>${surefire.plugin.version}</version>
+            <version>${surefire.version}</version>
           </dependency>
         </dependencies>
         <configuration>
@@ -187,7 +186,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${javadoc.plugin.version}</version>
         <configuration>
           <bottom>&lt;p align="center"&gt;Copyright &amp;#169; {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved.&lt;br /&gt;
             Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, the Apache Logging project logo,
