--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.apache.logging</groupId>
     <artifactId>logging-parent</artifactId>
-    <version>5</version>
+    <version>7</version>
     <relativePath/>
   </parent>
   <description>Apache Log4j 2</description>
@@ -252,29 +252,22 @@
     <!-- POM for jackson-dataformat-xml 2.13.1 depends on woodstox-core 6.2.7 -->
     <woodstox.version>6.3.1</woodstox.version>
     <groovy.version>3.0.10</groovy.version>
-    <compiler.plugin.version>3.10.1</compiler.plugin.version>
     <pmd.plugin.version>3.16.0</pmd.plugin.version>
     <changes.plugin.version>2.12.1</changes.plugin.version>
-    <javadoc.plugin.version>3.3.2</javadoc.plugin.version>
     <!-- surefire.plugin.version 2.18 yields http://jira.codehaus.org/browse/SUREFIRE-1121, which is fixed in 2.18.1 -->
     <!-- surefire.plugin.version 2.19 yields https://issues.apache.org/jira/browse/SUREFIRE-1193. -->
     <!-- all versions after 2.13 yield https://issues.apache.org/jira/browse/SUREFIRE-720 -->
-    <surefire.plugin.version>3.0.0-M6</surefire.plugin.version>
-    <failsafe.plugin.version>3.0.0-M6</failsafe.plugin.version>
+    <!-- property specified in `apache.org:apache` -->
+    <surefire.version>3.0.0-M6</surefire.version>
     <checkstyle.plugin.version>3.1.2</checkstyle.plugin.version>
     <!-- checkstyle 10.0 requires Java 11 -->
     <checkstyle.tool.version>8.45.1</checkstyle.tool.version>
-    <deploy.plugin.version>2.8.2</deploy.plugin.version>
-    <rat.plugin.version>0.13</rat.plugin.version>
     <!-- Do not update the pdf plugin version without verifying the new version works by running mvn site -->
     <pdf.plugin.version>1.2</pdf.plugin.version>
     <cobertura.plugin.version>2.7</cobertura.plugin.version>
     <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
-    <release.plugin.version>2.5.3</release.plugin.version>
-    <scm.plugin.version>1.12.2</scm.plugin.version>
     <jxr.plugin.version>3.2.0</jxr.plugin.version>
     <revapi.skip>false</revapi.skip>
-    <site.plugin.version>3.11.0</site.plugin.version>
     <!-- Maven site depends on Velocity and the escaping rules are different in newer versions. -->
     <!-- See https://maven.apache.org/plugins/maven-site-plugin/migrate.html -->
     <velocity.plugin.version>1.5</velocity.plugin.version>
@@ -319,20 +312,7 @@
     <netty-all.version>4.1.80.Final</netty-all.version>
     <wiremock.version>2.34.0</wiremock.version>
   </properties>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>apache</id>
-      <url>https://repository.apache.org/content/repositories/releases/</url>
-    </pluginRepository>
-<!--     <pluginRepository> -->
-<!--       <id>apache.snapshots</id> -->
-<!--       <name>Apache snapshots repository</name> -->
-<!--       <url>http://repository.apache.org/content/groups/snapshots</url> -->
-<!--       <snapshots> -->
-<!--         <enabled>true</enabled> -->
-<!--       </snapshots> -->
-<!--     </pluginRepository>     -->
-  </pluginRepositories>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -378,14 +358,14 @@
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core-test</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core-java9</artifactId>
         <version>${project.version}</version>
         <type>zip</type>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core-test</artifactId>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
@@ -1130,7 +1110,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>${compiler.plugin.version}</version>
           <configuration>
             <source>${maven.compiler.source}</source>
             <target>${maven.compiler.target}</target>
@@ -1150,12 +1129,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>${failsafe.plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.1.0</version>
+          <!-- version inherited from ASF parent POM -->
           <executions>
             <execution>
               <id>default-jar</id>
@@ -1229,11 +1207,6 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${surefire.plugin.version}</version>
-        </plugin>
-        <plugin>
           <groupId>com.github.spotbugs</groupId>
           <artifactId>spotbugs-maven-plugin</artifactId>
           <version>4.7.0.0</version>
@@ -1258,7 +1231,6 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <version>${rat.plugin.version}</version>
         <configuration>
           <consoleOutput>true</consoleOutput>
           <excludes>
@@ -1337,7 +1309,6 @@
       </plugin>
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>3.2.0</version>
       </plugin>
       <!-- DOAP (RDF) metadata generation -->
       <plugin>
@@ -1380,7 +1351,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${failsafe.plugin.version}</version>
         <executions>
           <execution>
             <goals>
@@ -1472,7 +1442,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>${site.plugin.version}</version>
+        <!-- version inherited from ASF parent POM -->
         <dependencies>
           <dependency>
             <groupId>org.asciidoctor</groupId>
@@ -1506,7 +1476,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${surefire.plugin.version}</version>
         <configuration>
           <systemPropertyVariables>
             <java.awt.headless>true</java.awt.headless>
@@ -1523,7 +1492,7 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <version>${rat.plugin.version}</version>
+        <!-- version inherited from ASF parent POM -->
         <configuration>
           <consoleOutput>true</consoleOutput>
           <excludes>
@@ -1585,7 +1554,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.9</version>
+        <!-- version inherited from ASF parent POM -->
         <reportSets>
           <reportSet>
             <reports>
@@ -1594,10 +1563,10 @@
               <report>dependency-info</report>
               <report>dependency-convergence</report>
               <report>dependency-management</report>
-              <report>project-team</report>
-              <report>mailing-list</report>
-              <report>issue-tracking</report>
-              <report>license</report>
+              <report>team</report>
+              <report>mailing-lists</report>
+              <report>issue-management</report>
+              <report>licenses</report>
               <report>scm</report>
               <report>summary</report>
             </reports>
@@ -1616,7 +1585,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>${surefire.plugin.version}</version>
+        <!-- version specified in ASF parent POM through `surefire.version` -->
         <reportSets>
           <reportSet>
             <id>integration-tests</id>
@@ -1635,11 +1604,8 @@
       <id>www.example.com</id>
       <url>scp://www.example.com/www/docs/project/</url>
     </site>
-    <snapshotRepository>
-      <id>asf-snapshots</id>
-      <name>ASF snapshot repository</name>
-      <url>https://repository.apache.org/content/repositories/snapshots</url>
-    </snapshotRepository>
+    <!-- `repository` from ASF parent POM (id: apache.releases.https) -->
+    <!-- `snapshotRepository` from ASF parent POM (id: apache.snapshots.https) -->
   </distributionManagement>
   <modules>
     <!-- Unpublished modules first: -->
@@ -1777,7 +1743,7 @@
           <plugin>
             <groupId>org.apache.rat</groupId>
             <artifactId>apache-rat-plugin</artifactId>
-            <version>${rat.plugin.version}</version>
+            <!-- version inherited from ASF parent POM -->
             <configuration>
               <consoleOutput>true</consoleOutput>
               <excludes>
